Add FirebaseDestination to sample-android application

--- a/sample-android/src/main/res/values/strings.xml
+++ b/sample-android/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">sample-android</string>
+    <string name="app_name">Tracy Sample App</string>
 </resources>
